--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
     <section class="galley-wrapper">
     <div class="gallery">
       <!-- Карточки изображений -->
-      <button type="button" class="load-more btn">Load more</button>
     </div>
+    <button type="button" class="load-more btn is-hidden">Load more</button>
     </section>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
